<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.Login"
    android:padding="20dp">


    <ImageView
        android:id="@+id/LogoImage"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/icons_and_logo"
        android:layout_gravity="center"
        android:contentDescription="@string/profile_picture_description"/>

    <TextView
        android:id="@+id/LogoName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bangers"
        android:text="@string/Hello_there_welcome_back"
        android:textSize="40sp"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/Slogan_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_continue"
        android:layout_gravity="center"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@id/username"
            android:textAppearance="@style/TextStyle"
            style="@style/Widget.Material3.AutoCompleteTextView.OutlinedBox"
            >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/user_name_hint"

            >

        </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@id/Pass"
            app:passwordToggleEnabled="true"
            android:textAppearance="@style/TextStyle"
            style="@style/Widget.Material3.AutoCompleteTextView.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/Pass"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:inputType="textPassword"
                android:hint="@string/password_hint"
                >
            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:text="@string/forget_password"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:elevation="0dp" />
        <Button
            android:id="@+id/go"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/go"
            android:background="@drawable/button_bg"
            android:textColor="@color/white"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"/>

        <Button
            android:id="@+id/new_user"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/new_user"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:elevation="0dp" />

    </LinearLayout>
</LinearLayout>