<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="25dp"
    tools:context=".activities.MainActivity">

    <ImageView
        android:id="@+id/back_arrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_arrow_back_ios_new_24"

        />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="250dp"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="20dp"
        app:srcCompat="@drawable/art1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:paddingBottom="25dp"
        android:text="@string/expense_lower"
        android:textSize="25sp"
        android:textStyle="bold" />


    <Button
        android:id="@+id/AddExpense"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/button_bg"
        android:fontFamily="sans-serif-black"
        android:text="@string/expense_add_btn"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <Button
        android:id="@+id/ViewExpense"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/button_bg"
        android:fontFamily="sans-serif-black"
        android:text="@string/expense_view_btn2"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <Button
        android:id="@+id/TotalExpense"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/button_bg"
        android:fontFamily="sans-serif-black"
        android:text="@string/expense_total_btn"
        android:textColor="@color/white"
        android:textSize="20sp" />


</LinearLayout>