<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.Login"
    android:padding="20dp"
    >

    <ImageView
        android:id="@+id/back_arrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_arrow_back_ios_new_24"
        android:layout_marginBottom="20dp"/>

<RelativeLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/LogoImage"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/icons_and_logo"
        android:layout_gravity="left"
        android:contentDescription="@string/profile_picture_description"/>

    <TextView
        android:id="@+id/LogoName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Add New Fund"
        android:textStyle="bold"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:layout_toRightOf="@+id/LogoImage"
        android:layout_centerVertical="true"/>
</RelativeLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextStyle"
            style="@style/Widget.Material3.AutoCompleteTextView.OutlinedBox"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/fundname"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/fund_hint"

                >

            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextStyle"
            style="@style/Widget.Material3.AutoCompleteTextView.OutlinedBox"
            >

            <com.google.android.material.textfield.TextInputEditText

                android:id="@+id/amount"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/fund_amount"

                >

            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextStyle"
            style="@style/Widget.Material3.AutoCompleteTextView.OutlinedBox"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/fund_dis"

                >

            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/fundsave"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="ADD"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:textStyle="bold"
            android:background="@drawable/button_bg"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_gravity="center"/>

    </LinearLayout>
</LinearLayout>