<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.UserProfile"
    android:padding="5dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:padding="20dp"
        android:background="@drawable/rounded_corner"
        android:layout_marginTop="20dp">

        <ImageView

            android:id="@+id/userImage"
            android:layout_width="359dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:src="@drawable/profile_icon"

            />

    </LinearLayout>

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:padding="20dp">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/name"
            android:hint="@string/full_name_hint"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginBottom="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/fullName"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:drawablePadding="10dp" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textView"
            android:hint="@string/user_name_hint"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="15dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/userName"
                android:layout_width="match_parent"
                android:layout_height="59dp"
                android:drawablePadding="10dp" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textView3"
            android:hint="@string/phone_hint"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="15dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/Phone"
                android:layout_width="match_parent"
                android:layout_height="59dp"
                android:drawablePadding="10dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/AddUser"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="15dp"

            android:background="@drawable/button_bg"
            android:text="SAVE"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold" />



        <Button
            android:id="@+id/back1"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/button_bg"
            android:text="back"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold"
            />

    </LinearLayout>

</LinearLayout>